# claude-memory-kit

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: publish.yml  test.yml
amoeba-labs-site/: package.json  pnpm-lock.yaml
amoeba-labs-site/src/app/: globals.css  layout.tsx  page.tsx
amoeba-labs-site/src/lib/: utils.ts
bench/: ab_fts_vs_qdrant.py
dashboard/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
dashboard/src/: middleware.ts
dashboard/src/app/: error.tsx  globals.css  layout.tsx
dashboard/src/components/: auth-provider.tsx  claim-banner.tsx  gate-badge.tsx  graph-controls.tsx  identity-section.tsx  marketing-nav.tsx  memory-card.tsx  memory-detail-panel.tsx  mode-badge.tsx  recall-trace.tsx  scope-pill.tsx  sensitivity-badge.tsx  sidebar.tsx  top-bar.tsx  user-button.tsx
dashboard/src/hooks/: use-local-storage.ts  use-scope.ts
dashboard/src/lib/: api.ts  auth.ts
hooks/: session_start.sh  stop.sh
src/: extract.rs  main.rs  server.rs  types.rs
src/claude_memory_kit/: __init__.py  __main__.py  auth.py  auth_keys.py  cli.py  cli_auth.py  config.py  extract.py  server.py  types.py
src/claude_memory_kit/api/: app.py
src/claude_memory_kit/consolidation/: __init__.py  decay.py  digest.py
src/consolidation/: decay.rs  digest.rs  journal.rs  mod.rs
src/store/: embeddings.rs  graph.rs  markdown.rs  mod.rs  sqlite.rs
src/tools/: auto_extract.rs  forget.rs  identity.rs  mod.rs  recall.rs  reflect.rs  remember.rs
tests/: conftest.py  test_api.py  test_auth_config_types.py  test_auth_store_extract.py  test_cli.py  test_consolidation.py  test_coverage_gaps.py  test_qdrant_store.py  test_server.py  test_sqlite.py  test_tools.py  test_vectors.py
(+54 files in other folders)
