[project]
name = "claude-memory-kit"
version = "0.1.0"
description = "Claude Memory Kit (CMK). Persistent memory for Claude. Embedded, zero-server."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "httpx>=0.27",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "PyJWT[crypto]>=2.0",
]

[project.scripts]
cmk = "claude_memory_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory_kit"]
